--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "publish": true
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/rollup": "^3.1.0",
     "hono": "4.8.2",
     "isbot": "5.1.26",
     "react": "19.0.0",
